<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Aeroclub</string>
    <string name="list_title">Liste</string>
    <string name="action_settings">Settings</string>
    <string name="validation_message">Chargement en cours&#8230;</string>
    <string name="plane_list">Liste des avions</string>
	<string name="flight_list">Liste des vols</string>
	<string name="no_item">Pas de résultat</string>
	<string name="back">Retour</string>
	<string name="error">Erreur</string>
	<string name="loaded">Chargé !</string>
	<string name="sign_in">Connexion</string>
	<string name="validate">Valider</string>
	<string name="connected_as">Connecté en tant que</string>
	<string name="logout">Déconnexion</string>
	
</resources>